--- a/GenericFPS/Config/DefaultEngine.ini
+++ b/GenericFPS/Config/DefaultEngine.ini
@@ -1,7 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Maps/FPSMap.FPSMap
+EditorStartupMap=/Game/Maps/FPSMap.FPSMap
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
